# Vox

./: .coverage  .gitignore  CLAUDE.md  Makefile  PRD.md  README.md  com.voxapp.rewrite.plist.template  main.py  pyproject.toml  requirements.txt  setup.py  vox.spec
.auto-claude/specs/001-api-key-stored-in-plaintext-in-configuration-file/: build-progress.txt  implementation_plan.json
assets/: logo.icns
docs/: ARCHITECTURE.md  DEVELOPMENT.md  PYOBJC_GUIDE.md  PYTHON_PATTERNS.md  README.md  TESTING.md
scripts/: reset_permissions.sh
tests/: __init__.py  test_api.py  test_config.py  test_hotkey.py  test_keychain.py  test_notifications.py
vox/: Info.plist  __init__.py  api.py  config.py  hotkey.py  notifications.py  preferences.py  service.py  speech.py  ui.py
