[project]
name = "vox"
version = "0.1.0"
description = "AI-powered text rewriting through macOS contextual menu"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyobjc-core>=10.0",
    "pyobjc-framework-cocoa>=10.0",
    "pyobjc-framework-appkit>=10.0",
    "openai>=1.0.0",
    "pyyaml>=6.0",
    "keyring>=24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["vox"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
